# scrollcast

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  scrollcast.toml.example  test-pandoc.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  file_processor.rs  lib.rs  main.rs  markdown_generator.rs  pandoc.rs  pdf_generator.rs  syntax_highlighter.rs  theme.rs
src/renderer/: epub.rs  html.rs  mod.rs  pdf.rs
src/syntax/: highlighter.rs  mod.rs
test-project/: README.md  config.json  myfile.ps
test-project/src/: lib.rs  main.rs
test_project/: main.rs
testfiles/test_project/: README.md
