[package]
name = "git-to-pdf"
version = "0.1.0"
edition = "2021"
authors = ["heartcode <0xheartcode@gmail.com>"]
description = "A fast Rust CLI tool for converting Git repositories to beautifully formatted PDF documents"
license = "MIT"
repository = "https://github.com/0xheartcode/git-to-pdf"
keywords = ["git", "pdf", "cli", "documentation", "code"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-to-pdf"
path = "src/main.rs"

[dependencies]
# CLI and configuration
clap = { version = "4.4", features = ["derive", "color"] }
dialoguer = "0.11"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File operations and Git
git2 = "0.18"
walkdir = "2.4"
content_inspector = "0.2"

# PDF generation
printpdf = "0.6"

# Syntax highlighting
syntect = { version = "5.1", features = ["default-themes", "default-syntaxes", "parsing"] }

# Async and utilities
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Color and styling
colorful = "0.2"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
