[package]
name = "scrollcast"
version = "0.1.0"
edition = "2021"
authors = ["heartcode <0xheartcode@gmail.com>"]
description = "A fast Rust CLI tool for converting Git repositories to beautifully formatted documents"
license = "MIT"
repository = "https://github.com/0xheartcode/scrollcast"
keywords = ["git", "pdf", "epub", "cli", "documentation", "code"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "scrollcast"
path = "src/main.rs"

[dependencies]
# CLI and configuration
clap = { version = "4.4", features = ["derive", "color"] }
dialoguer = "0.11"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File operations and Git
git2 = "0.18"
walkdir = "2.4"
content_inspector = "0.2"
ignore = "0.4"

# HTTP client for downloading syntax definitions
reqwest = { version = "0.11", features = ["json"] }

# Async and utilities
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Color and styling
colorful = "0.2"

# Configuration and directories
dirs = "5.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
