[package]
name = "scrollcast"
version = "0.1.0"
edition = "2021"
authors = ["heartcode <0xheartcode@gmail.com>"]
description = "A fast Rust CLI tool for converting Git repositories to beautifully formatted documents"
license = "MIT"
repository = "https://github.com/0xheartcode/scrollcast"
keywords = ["git", "pdf", "epub", "markdown", "wkhtmltopdf"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "scrollcast"
path = "src/lib.rs"

[[bin]]
name = "scrollcast"
path = "src/main.rs"

[dependencies]
# CLI and configuration
clap = { version = "4.4", features = ["derive", "color"] }
dialoguer = "0.11"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File operations and Git
git2 = "0.18"
walkdir = "2.4"
content_inspector = "0.2"
ignore = "0.4"

# HTTP client for downloading syntax definitions
reqwest = { version = "0.11", features = ["json"] }

# Async and utilities
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Color and styling
colorful = "0.2"

# Configuration and directories
dirs = "5.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# System monitoring
sysinfo = "0.31"

# Document parsing and rendering
pulldown-cmark = "0.13"
syntect = "5.2"

# PDF generation
printpdf = "0.8.2"
image = "0.25"

# EPUB generation
epub-builder = "0.7"
zip = "2.1"
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
